# hyperfunc

./: .env.sample  .gitignore  README.md  TASKS.md  demo.py  initialdesign.md  pyproject.toml
.github/workflows/: test.yml
demos/chat_agent/: app.py  run.py
demos/game_agent/: app.py  run.py
demos/nano_classifier/: run.py
demos/shape_classifier/: README.md  pyproject.toml
demos/shape_classifier/scripts/: evaluate.py  train.py
demos/shape_classifier/shape_classifier/: __init__.py  data.py  models.py  system.py
demos/shape_classifier/tests/: __init__.py  test_system.py
src/hyperfunc/: __init__.py  agents.py  core.py  es.py  llm.py  memory.py  observability.py  primitives.py  prompt.py  rate_limit.py  signature.py
src/hyperfunc/eval/: __init__.py  llm_judge.py  scorer.py
tests/: test_affine_composition.py  test_agent_types.py  test_core.py  test_dag_tracing.py  test_eggroll_es.py  test_eval.py  test_llm.py  test_memory.py  test_observability.py  test_optimization.py  test_otlp_integration.py  test_population_eval.py  test_primitives.py  test_prompt_learning.py  test_signature.py  test_torch_eggroll_vs_jax.py  test_xor_composition.py
