[project]
name = "shape-classifier-demo"
version = "0.1.0"
description = "Demo: Shape + color classifier with factorized architecture optimized via ES"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hyperfunc",
    "torch>=2.0",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.uv.sources]
hyperfunc = { path = "../.." }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shape_classifier"]
